--- a/calc.html
+++ b/calc.html
@@ -22,7 +22,7 @@
 	<br>
 	<button type="button">Vis Temperaturer</button> 
 	<br>
-	<img src="Tempbillede.jpg" width="28" height="308">
+	<img src="Tempbillede.jpg">
 	<p> Gå tilbage til oversigten <a href="index.html">Home</a></p>
 </body>
 
