--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<li><a href="bruger.html">Min Bruger</a></li>
 				<li><a href="socialmedia.html">SocialMedia</a></li>
 				<li><a href="omappen.html">Om appen</a></li>
+				<li><a href="bluetooth.html">Bluetooth</a></li>
 			</ul>
 </nav>
 	<p> God fornøjelse! </p>
