--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<li><a href="socialmedia.html">SocialMedia</a></li>
 				<li><a href="omappen.html">Om appen</a></li>
 				<li><a href="bluetooth.html">Bluetooth</a></li>
-				<li><a href="Bluetooth2.html">Bluetooth2</a><li>
+				<li><a href="bluetooth2.html">Bluetooth2</a><li>
 			</ul>
 </nav>
 	<p> God fornøjelse! </p>
